--- a/Views/NASA_APoD.html
+++ b/Views/NASA_APoD.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Stat Galaxy</title>
+    <link rel="shortcut icon" href="..\Logos\Stat_Galaxy_Icon_S.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="StyleSheets/main.css">
-    <link rel="stylesheet" type="text/css" href="StyleSheets/NASA_APoD.css">
-    <link rel="stylesheet" href="Packages/Fancybox/jquery.fancybox.min.css" />
+    <link rel="stylesheet" type="text/css" href="../StyleSheets/main.css">
+    <link rel="stylesheet" type="text/css" href="../StyleSheets/NASA_APoD.css">
+    <link rel="stylesheet" href="../Packages/Fancybox/jquery.fancybox.min.css">
   </head>
   <body>
 
   <nav class="navbar navbar-expand-md navbar-custom">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="Logos/Logo_Rough_Draft_Transparent_Light.png" width="120" height="30" class="d-inline-block align-top" alt="Logo">
+        <img src="../Logos/Logo_Rough_Draft_Transparent_Light.png" width="120" height="30" class="d-inline-block align-top" alt="Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -30,7 +31,7 @@
 
   <div class="container">
     <div class="APOD-header">
-      <img src="Logos/NASA_Logo.png" alt="NASA Logo">
+      <img src="../Logos/NASA_Logo.png" alt="NASA Logo">
       <h1>Astronomy Picture of the Day</h1>
     </div>
     <div>
@@ -44,7 +45,7 @@
 
     <div class="img-thumbnail">
       <div>
-        <img src="APoDs/Fire on Earth.jpg" data-lightbox alt="APOD" class="img-fluid">
+        <img src="../APoDs/Fire on Earth.jpg" data-lightbox alt="APOD" class="img-fluid">
       </div>
       <p> <strong>Title:</strong> Fire on Earth</p>
       <p> <strong>By:</strong> Mike Trout</p>
@@ -62,8 +63,8 @@
           <a data-fancybox="images" data-fancybox data-caption="<p> <strong>Title:</strong> Highlights of the North Autumn Sky</p>
                                                                 <p> <strong>By:</strong> Mike Trout</p>
                                                                 <p> <strong>Date:</strong> 2018 August 25</p>
-                                                                <p> <strong>Explanation:</strong> Test explanation</p>" href="APoDs/Highlights of the North Autumn Sky.jpg">
-            <img src="APoDs/Highlights of the North Autumn Sky.jpg" alt="APOD" class="img-responsive">
+                                                                <p> <strong>Explanation:</strong> Test explanation</p>" href="../APoDs/Highlights of the North Autumn Sky.jpg">
+            <img src="../APoDs/Highlights of the North Autumn Sky.jpg" alt="APOD" class="img-responsive">
           </a>
           <p> <strong>Title:</strong> Highlights of the North Autumn Sky</p>
           <p> <strong>By:</strong> Mike Trout</p>
@@ -76,8 +77,8 @@
           <a data-fancybox="images" data-fancybox data-caption="<p> <strong>Title:</strong> Meteor Before Galaxy</p>
                                                                 <p> <strong>By:</strong> Mike Trout</p>
                                                                 <p> <strong>Date:</strong> 2018 August 24</p>
-                                                                <p> <strong>Explanation:</strong> Test explanation</p>" href="APoDs/Meteor Before Galaxy.jpg">
-            <img src="APoDs/Meteor Before Galaxy.jpg" alt="APOD" class="img-responsive">
+                                                                <p> <strong>Explanation:</strong> Test explanation</p>" href="../APoDs/Meteor Before Galaxy.jpg">
+            <img src="../APoDs/Meteor Before Galaxy.jpg" alt="APOD" class="img-responsive">
           </a>
           <p> <strong>Title:</strong> Meteor Before Galaxy</p>
           <p> <strong>By:</strong> Mike Trout</p>
@@ -90,8 +91,8 @@
           <a data-fancybox="images" data-fancybox data-caption="<p> <strong>Title:</strong> Moon and Venus Over Cannon Beach</p>
                                                                 <p> <strong>By:</strong> Mike Trout</p>
                                                                 <p> <strong>Date:</strong> 2018 August 23</p>
-                                                                <p> <strong>Explanation:</strong> Test explanation</p>" href="APoDs/Moon and Venus Over Cannon Beach.jpg">
-            <img src="APoDs/Moon and Venus Over Cannon Beach.jpg" alt="APOD" class="img-fluid img-responsive">
+                                                                <p> <strong>Explanation:</strong> Test explanation</p>" href="../APoDs/Moon and Venus Over Cannon Beach.jpg">
+            <img src="../APoDs/Moon and Venus Over Cannon Beach.jpg" alt="APOD" class="img-fluid img-responsive">
           </a>
           <p> <strong>Title:</strong> Moon and Venus Over Cannon Beach</p>
           <p> <strong>By:</strong> Mike Trout</p>
@@ -104,18 +105,17 @@
           <a data-fancybox="images" data-fancybox data-caption="<p> <strong>Title:</strong> NGC 1672 Barred Sprial Galaxy from Hubble</p>
                                                                 <p> <strong>By:</strong> Mike Trout</p>
                                                                 <p> <strong>Date:</strong> 2018 August 22</p>
-                                                                <p> <strong>Explanation:</strong> Test explanation</p>" href="APoDs/NGC 1672 Barred Sprial Galaxy from Hubble.jpg">
-            <img src="APoDs/NGC 1672 Barred Sprial Galaxy from Hubble.jpg" alt="APOD" class="img-fluid img-responsive">
+                                                                <p> <strong>Explanation:</strong> Test explanation</p>" href="../APoDs/NGC 1672 Barred Sprial Galaxy from Hubble.jpg">
+            <img src="../APoDs/NGC 1672 Barred Sprial Galaxy from Hubble.jpg" alt="APOD" class="img-fluid img-responsive">
           </a>
           <p> <strong>Title:</strong> NGC 1672 Barred Sprial Galaxy from Hubble</p>
           <p> <strong>By:</strong> Mike Trout</p>
           <p> <strong>Date:</strong> 2018 August 22</p>
         </div>
       </div>
-
-
-
     </div>
+
+    <button type="button" class="sg-btn">Show More</button>
 
 
   </div>
@@ -140,7 +140,7 @@
 
           <div class="col-md-2 mb-3">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!">Contact Us</a>
+              <a href="contact_us.html">Contact Us</a>
             </h6>
           </div>
 
@@ -178,9 +178,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="Packages/Fancybox/jquery.fancybox.min.js"></script>
-
-
+  <script src="../Packages/Fancybox/jquery.fancybox.min.js"></script>
 
   </body>
 </html>
