Last round of changes

--- a/Views/NASA_APoD.html
+++ b/Views/NASA_APoD.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stat Galaxy</title>
-    <link rel="shortcut icon" href="..\Logos\Stat_Galaxy_Icon_S.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../Logos/StatGalaxyLogos/Stat_Galaxy_Icon_S.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../StyleSheets/main.css">
     <link rel="stylesheet" type="text/css" href="../StyleSheets/NASA_APoD.css">
@@ -14,14 +14,14 @@
   <nav class="navbar navbar-expand-md navbar-custom">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="../Logos/Logo_Rough_Draft_Transparent_Light.png" width="120" height="30" class="d-inline-block align-top" alt="Logo">
+        <img src="../Logos/StatGalaxyLogos/Logo_Rough_Draft_Transparent_Light.png" width="120" height="30" class="d-inline-block align-top" alt="Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="#">NASA APoDs</a>
+          <a class="nav-item nav-link" href="NASA_APOD.html">NASA APoDs</a>
           <a class="nav-item nav-link" href="#">Galaxy Overview</a>
           <a class="nav-item nav-link" href="#">Planet Profiles</a>
         </div>
@@ -31,7 +31,7 @@
 
   <div class="container">
     <div class="APOD-header">
-      <img src="../Logos/NASA_Logo.png" alt="NASA Logo">
+      <img src="../Logos/ResourceLogos/NASA_Logo.png" alt="NASA Logo">
       <h1>Astronomy Picture of the Day</h1>
     </div>
     <div>
@@ -152,7 +152,7 @@
 
           <div class="col-md-2 mb-3">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!">Resources</a>
+              <a href="resources.html">Resources</a>
             </h6>
           </div>
 
