--- a/Views/index.html
+++ b/Views/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stat Galaxy</title>
-    <link rel="shortcut icon" href="..\Logos\Stat_Galaxy_Icon_S.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../Logos/StatGalaxyLogos/Stat_Galaxy_Icon_S.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../StyleSheets/main.css">
   </head>
@@ -11,8 +11,13 @@
 
   <nav class="navbar navbar-expand-md navbar-custom">
     <div class="container">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+      </button>
       <a class="navbar-brand" href="index.html">
-        <img src="../Logos/Logo_Rough_Draft_Transparent_Light.png" width="120" height="30" class="d-inline-block align-top" alt="Logo">
+        <img src="../Logos/StatGalaxyLogos/Logo_Rough_Draft_Transparent_Light.png" width="120" height="30" class="d-inline-block align-top" alt="Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -70,7 +75,7 @@
 
           <div class="col-md-2 mb-3">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!">Resources</a>
+              <a href="resources.html">Resources</a>
             </h6>
           </div>
 
