--- a/Views/resources.html
+++ b/Views/resources.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="../Logos/statGalaxyLogos/Stat_Galaxy_Icon_S.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../StyleSheets/main.css">
+    <link rel="stylesheet" type="text/css" href="../StyleSheets/resources.css">
     <link rel="stylesheet" href="../Packages/Fancybox/jquery.fancybox.min.css">
   </head>
   <body>
@@ -29,34 +30,25 @@
   </nav>
 
   <div class="container">
-    <h1>Contact Us</h1>
+
+    <h1>Resources</h1>
 
     <hr>
 
-    <form action="SubmitContact">
-      <div class="form-group">
-        <label for="InputEmail">Email Address</label>
-        <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Email" required>
+    <div class="sg-resource">
+      <h4><i>NASA</i></h4>
+      <div class="row">
+        <div>
+          <img src="../Logos/ResourceLogos/NASA_Logo.png" alt="NASA Logo">
+        </div>
+        <div>
+          <ul>
+            <li>Used to provide the Astronomy Picture of the Day (APoD)</li>
+            <li>Provided data for the Galaxy Overview and Planet Profile visualizations</li>
+          </ul>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="InputName">Name</label>
-        <input type="text" class="form-control" id="InputName" placeholder="Name" required>
-      </div>
-      <div class="form-group">
-        <label for="SelectedReason">Contact Reason</label>
-        <select class="custom-select mr-sm-2" id="SelectedReason">
-          <option selected>Reason...</option>
-          <option value="Question">Question</option>
-          <option value="Suggestion">Suggestion</option>
-          <option value="Other">Other</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="InputMessage">Message</label>
-        <textarea type="text" class="form-control" id="InputMessage" placeholder="Message" rows=15 required></textarea>
-      </div>
-      <button type="submit" class="sg-btn">Submit</button>
-    </form>
+    </div>
 
   </div>
 
@@ -116,7 +108,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="../Packages/Fancybox/jquery.fancybox.min.js"></script>
 
   </body>
 </html>
